--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -73,6 +73,7 @@ This model would likely fall out of the scope of `R-INLA`, but would be possible
 
 2. Although suitable for early stage research, wider adoption of the INLA implementation developed in Chapter \@ref(naomi-aghq) would be enhanced greatly by improvements to its speed and usability.
 The most important speed enhancement would come from using the simplified approximation to the Laplace marginals developed by @wood2020simplified.
+Although the naive implementation used in this thesis is viable for integrating Laplace marginals over a small number of hyperparameter quadrature nodes, such as the $3^2 = 9$ nodes used Sections \@ref(loaloa) and \@ref(epil), it becomes prohibitively slow for larger numbers.
 Usability would be improved by providing the method as a part of statistical software, likely via the `aghq` package.
 The primary difficulty which would have to be overcome to do so is that the `random` argument of `TMB::MakeADFun` does not allow indexing.
 
