Fill in final two survey sections

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -691,28 +691,28 @@ if(knitr::is_latex_output()) {
 
 The results (Figure \@ref(fig:crps-mean-se-surveys) and Table \@ref(tab:cv-crps)) for each survey were as follows:
 
-1. For the 2017 PHIA survey in Côte d'Ivoire, all of the models performed similarly, using both LOO and SLOO cross-validation (Figures \@ref(fig:crps-mean-se-civ2017phia))
+1. For the 2017 PHIA survey in Côte d'Ivoire, all of the models performed similarly, using both LOO and SLOO cross-validation (Figure \@ref(fig:crps-mean-se-civ2017phia))
 The pointwise CRPS for all models was high at one outlying district in the survey, Grand-Ponts.
 It is difficult to see how any spatial random model would perform well in this situation, without additional covariates or using a distribution with heavier tails than the Gaussian.
 
     The CK and IK models had lengthscale posterior distributions largely unchanged from their prior distribution (Figure \@ref(fig:lengthscale-posteriors)).
-    This uncertainty in lengthscale resulted wide prevalence 90% credible intervals for the CK and IK models in Figure \@ref(ladder-civ2017phia).
+    This uncertainty in lengthscale resulted wide prevalence 90% credible intervals for the CK and IK models in Figure \@ref(fig:ladder-civ2017phia).
     This example shows the importance of being careful using kernel models, and the prior distributions set on their hyperparameters.
     It is suprisingly that this behaviour appears not to have resulted in poor LOO or SLOO performance.
 
     For this survey the BYM2 proportion posterior distribution was also similar to its prior distribution, in contrast to each of the other surveys which had BYM2 proportion posteriors peaked at one, corresponding to spatially structured noise (Figure \@ref(fig:proportion-posteriors)).
 
-2. For the 2017 PHIA survey in Malawi (Figures \@ref(fig:crps-mean-se-mwi2016phia)) the Besag and BYM2 models performed the best, followed by the kernel models, and then the IID model.
+2. For the 2017 PHIA survey in Malawi the Besag and BYM2 models performed the best, followed by the kernel models, and then the IID model (Figure \@ref(fig:crps-mean-se-mwi2016phia)).
 While the LOO and SLOO CRPS values for IID, Besag and BYM2 models were similar, for the kernel models forecasting performance was substantially reduced by leaving out adjacent districts.
 This finding is suprising, as the kernel models make use of more distant correlations, and it is the adjacency-based models that one would intuitively expect to be hampered more by the SLOO cross-validation.
 For the IID model, that LOO and SLOO performance are similar is no surprise as in all cases the IID model should be predicting the mean.
 Though less data is available in the SLOO case, this should be of little consequence.
 
-3. For the 2017 PHIA survey in Tanzania (Figures  \@ref(fig:crps-mean-se-tza2017phia)).
+3. For the 2017 PHIA survey in Tanzania (Figure \@ref(fig:crps-mean-se-tza2017phia)), under LOO cross-validation the kernel models performed better, but under SLOO cross-validation there was a significant drop in performance.
 
-4. Finally, for the 2016 PHIA survey in Zimbabwe (Figures \@ref(fig:crps-mean-se-zwe2016phia)).
-
-Figures \@ref(fig:ladder-civ2017phia), \@ref(fig:ladder-mwi2016phia), \@ref(fig:ladder-tza2017phia), and \@ref(fig:ladder-zwe2016phia) show the posterior mean and 95% credible interval obtained for each area for each inferential model.
+4. Finally, for the 2016 PHIA survey in Zimbabwe, performance for each of the spatially structured models was similar (Figure \@ref(fig:crps-mean-se-zwe2016phia)).
+Again, under SLOO cross-validation, performance of the BYM2 and kernel-based models dropped.
+Differences within the kernel-based models for this survey, and throughout this study, were limited.
 
 ## Discussion
 
